# 4_Asyncio

./: .env  README.md  docker-compose.yaml  main.py  pyproject.toml
core/: database.py  settings.py
crud/: crud.py
models/: __init__.py  models.py
utils/: utils.py
