[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
