[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
pytest = "^8.3.4"
mypy = "^1.14.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.37"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.7.1"
asyncpg = "^0.30.0"
aiohttp = "^3.11.11"
pandas = "^2.2.3"
more-itertools = "^10.5.0"
xlrd = "^2.0.1"
aiofiles = "^24.1.0"

# black
[tool.black]
line-length = 79
extend-exclude = "migrations/"

# isort
[tool.isort]
profile = "black"
extend_skip_glob = ["migrations"]
known_local_folder=["core", "crud", "api", "models", "schemas", "tests", "main", "utils"]
line_length = 79
lines_after_imports = 2


[tool.pylint]
ignore = [".git", "__pycache__", ".venv"]
max-line-length = 79
disable = ["C0114", "C0115", "C0116", "W1514", "W3101", "R0903", "C0103"]